Update Gallery Section

--- a/index.html
+++ b/index.html
@@ -2355,25 +2355,10 @@
         <!-- Header -->
         <div class="vdc-header vdc-fade-in">
             <span class="vdc-label">Gallery</span>
-            <h2 class="vdc-title">My Visual Diary</h2>
+            <h2 class="vdc-title">TechVaaganza Through the Years</h2>
             <p class="vdc-subtitle">
-                See the world through my lens, adventures & photos and colors.
+                A glimpse into the innovation, energy, and moments from our previous TechVaaganza editions.
             </p>
-        </div>
-
-        <!-- Navigation Tabs -->
-        <div class="vdc-nav">
-            <button class="vdc-nav-btn active">All</button>
-            <button class="vdc-nav-btn">Travel</button>
-            <button class="vdc-nav-btn">Nature</button>
-            <button class="vdc-nav-btn">City</button>
-            <button class="vdc-nav-btn">Food</button>
-            <button class="vdc-nav-btn">People</button>
-            <button class="vdc-nav-btn">Events</button>
-            <button class="vdc-nav-btn">Tech</button>
-            <button class="vdc-nav-btn">Art</button>
-            <button class="vdc-nav-btn">Sports</button>
-            <button class="vdc-nav-btn view-more">View More +</button>
         </div>
 
         <!-- Carousel -->
