Updated UPI payment integration

--- a/index.html
+++ b/index.html
@@ -2633,7 +2633,7 @@
                         
                         <!-- Mobile: Clickable QR with UPI Deep Link -->
                         <a href="upi://pay?pa=7396540384@ybl&pn=Ayesha%20Noor&am=500&cu=INR" class="qr-code-link" id="qrCodeLink">
-                            <img src="qr-code.jpeg" alt="Payment QR Code" class="qr-code-image">
+                            <img src="images/qr-code.jpeg" alt="Payment QR Code" class="qr-code-image">
                         </a>
                         
                         <!-- Mobile Payment Button -->
