Updated UPI payment integration

--- a/index.html
+++ b/index.html
@@ -2632,12 +2632,12 @@
                         <h4>Payment (₹500)</h4>
                         
                         <!-- Mobile: Clickable QR with UPI Deep Link -->
-                        <a href="upi://pay?pa=7396540384@ybl&pn=Ayesha%20Noor&am=500&cu=INR" class="qr-code-link" id="qrCodeLink">
+                        <a href="upi://pay?pa=8096335879@axl&pn=Thota%20Akshith%20Kumar&am=500&cu=INR" class="qr-code-link" id="qrCodeLink">
                             <img src="images/qr-code.jpeg" alt="Payment QR Code" class="qr-code-image">
                         </a>
                         
                         <!-- Mobile Payment Button -->
-                        <a href="upi://pay?pa=7396540384@ybl&pn=Ayesha%20Noor&am=500&cu=INR" class="upi-payment-btn" id="upiPayBtn">
+                        <a href="upi://pay?pa=8096335879@axl&pn=Thota%20Akshith%20Kumar&am=500&cu=INR" class="upi-payment-btn" id="upiPayBtn">
                             <svg class="upi-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <rect x="2" y="5" width="20" height="14" rx="2"/>
                                 <line x1="2" y1="10" x2="22" y2="10"/>
