--- a/index.html
+++ b/index.html
@@ -2523,75 +2523,75 @@
             <div class="vdc-carousel-track" id="vdcCarouselTrack">
                 <!-- Card 1 -->
                 <div class="vdc-card" data-position="0">
-                    <img src="images/img1.jpg" alt="Mountain Lake">
+                    <img src="./images/img1.JPG" alt="TechVaaganza Event Highlights">
                 </div>
                 <!-- Card 2 -->
                 <div class="vdc-card" data-position="1">
-                    <img src="images/img2.jpg" alt="Beach Sunset">
+                    <img src="./images/img2.JPG" alt="TechVaaganza Workshop Moments">
                 </div>
                 <!-- Card 3 -->
                 <div class="vdc-card" data-position="-1">
-                    <img src="images/img3.jpg" alt="Nature Path">
+                    <img src="./images/img3.JPG" alt="TechVaaganza Student Activities">
                 </div>
                 <!-- Card 4 -->
                 <div class="vdc-card" data-position="2">
-                    <img src="images/img4.jpg" alt="Technology">
+                    <img src="./images/img4.JPG" alt="TechVaaganza AWS Training Sessions">
                 </div>
                 <!-- Card 5 -->
                 <div class="vdc-card" data-position="-2">
-                    <img src="images/img5.jpg" alt="Music Concert">
+                    <img src="./images/img5.JPG" alt="TechVaaganza Hands-on Labs">
                 </div>
                 <!-- Card 6 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img6.jpg" alt="Tropical Beach">
+                    <img src="./images/img6.JPG" alt="TechVaaganza Event Highlights">
                 </div>
                 <!-- Card 7 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img7.jpg" alt="Mountain Peak">
+                    <img src="./images/img7.JPG" alt="TechVaaganza Workshop Moments">
                 </div>
                 <!-- Card 8 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img8.jpg" alt="Mountain Lake">
+                    <img src="./images/img8.JPG" alt="TechVaaganza Student Activities">
                 </div>
                 <!-- Card 9 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img9.jpg" alt="Beach Sunset">
+                    <img src="./images/img9.JPG" alt="TechVaaganza AWS Training Sessions">
                 </div>
                 <!-- Card 10 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img10.jpg" alt="Nature Path">
+                    <img src="./images/img10.JPG" alt="TechVaaganza Hands-on Labs">
                 </div>
                 <!-- Card 11 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img11.jpg" alt="Technology">
+                    <img src="./images/img11.JPG" alt="TechVaaganza Event Highlights">
                 </div>
                 <!-- Card 12 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img12.jpg" alt="Music Concert">
+                    <img src="./images/img12.JPG" alt="TechVaaganza Workshop Moments">
                 </div>
                 <!-- Card 13 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img13.jpg" alt="Tropical Beach">
+                    <img src="./images/img13.JPG" alt="TechVaaganza Student Activities">
                 </div>
                 <!-- Card 14 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img14.jpg" alt="Mountain Peak">
+                    <img src="./images/img14.JPG" alt="TechVaaganza AWS Training Sessions">
                 </div>
                 <!-- Card 15 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img15.jpg" alt="Mountain Lake">
+                    <img src="./images/img15.JPG" alt="TechVaaganza Hands-on Labs">
                 </div>
                 <!-- Card 16 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img16.jpg" alt="Beach Sunset">
+                    <img src="./images/img16.JPG" alt="TechVaaganza Event Highlights">
                 </div>
                 <!-- Card 17 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img17.jpg" alt="Nature Path">
+                    <img src="./images/img17.JPG" alt="TechVaaganza Workshop Moments">
                 </div>
                 <!-- Card 18 -->
                 <div class="vdc-card" data-position="hidden">
-                    <img src="images/img18.jpg" alt="Technology">
+                    <img src="./images/img18.JPG" alt="TechVaaganza Student Activities">
                 </div>
             </div>
 
