--- a/index.html
+++ b/index.html
@@ -2558,19 +2558,19 @@
                     <img src="./images/img1.JPG" alt="TechVaaganza Event Highlights">
                 </div>
                 <!-- Card 2 -->
-                <div class="vdc-card" data-position="-1">
+                <div class="vdc-card" data-position="1">
                     <img src="./images/img2.JPG" alt="TechVaaganza Workshop Moments">
                 </div>
                 <!-- Card 3 -->
-                <div class="vdc-card" data-position="1">
+                <div class="vdc-card" data-position="2">
                     <img src="./images/img3.JPG" alt="TechVaaganza Student Activities">
                 </div>
                 <!-- Card 4 -->
-                <div class="vdc-card" data-position="2">
+                <div class="vdc-card" data-position="hidden">
                     <img src="./images/img4.JPG" alt="TechVaaganza AWS Training Sessions">
                 </div>
                 <!-- Card 5 -->
-                <div class="vdc-card" data-position="-2">
+                <div class="vdc-card" data-position="-1">
                     <img src="./images/img5.JPG" alt="TechVaaganza Hands-on Labs">
                 </div>
                 <!-- Card 6 -->
