changed the name

--- a/index.html
+++ b/index.html
@@ -2563,7 +2563,7 @@
                 </div>
                 <!-- Card 2 -->
                 <div class="vdc-card" data-position="1">
-                    <img src="./images/img2.JPG" alt="TechVaaganza Workshop Moments">
+                    <img src="./images/imgproblem.JPG" alt="TechVaaganza Workshop Moments">
                 </div>
                 <!-- Card 3 -->
                 <div class="vdc-card" data-position="2">
