--- a/index.html
+++ b/index.html
@@ -1729,11 +1729,19 @@
         }
 
         .hero-card-heading {
-            margin: 0 0 12px 0;
+            margin: 0 0 5px 0;
             font-size: 28px;
             font-weight: 700;
             color: white;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        .hero-card-subtitle {
+            margin: 0;
+            font-size: 14px;
+            font-weight: 500;
+            color: rgba(255, 140, 0, 0.9);
+            text-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
         }
 
         .hero-card-text {
@@ -3093,6 +3101,240 @@
                         </div>
                     </div>
 
+                    <!-- Team Member 11 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Divya_team11.jpeg"
+                                alt="Divya">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Divya</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 12 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Priya_team_12.jpeg"
+                                alt="Priya">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Priya</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 13 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Sathwika_team_13.jpeg"
+                                alt="Sathwika">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Sathwika</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 14 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Chandana_team_14.jpeg"
+                                alt="Chandana">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Chandana</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 15 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Radhika_team_15.jpeg"
+                                alt="Radhika">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Radhika</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 17 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/varsha_team_17.JPG"
+                                alt="Varsha">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Varsha</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 18 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Aravind_team_18.jpeg"
+                                alt="Aravind">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Aravind</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 19 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/divya_team_19.jpeg"
+                                alt="Divya">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Divya</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 20 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Dharani_team_20.jpg"
+                                alt="Dharani">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Dharani</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 21 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Hamikha_team_21.jpg"
+                                alt="Hamikha">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Hamikha</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 22 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/SoukyaSri_team_22.jpg"
+                                alt="Soukya Sri">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Soukya Sri</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 23 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Ruhit_team_23.jpeg"
+                                alt="Ruhit">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Ruhit</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 24 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Jayanth_team_24.jpeg"
+                                alt="Jayanth">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Jayanth</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 25 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Koushik_team_25.jpeg"
+                                alt="Koushik">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Koushik</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 26 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Karthik_team_26.jpeg"
+                                alt="Karthik">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Karthik</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 27 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Sricharan_team_27.jpeg"
+                                alt="Sricharan">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Sricharan</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 28 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/lokesh_team_28.jpeg"
+                                alt="Lokesh">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Lokesh</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 29 -->
+                    <div class="team-member-card">
+                        <div class="team-member-image-wrapper">
+                            <img src="./images/Manikarnika_team_29.jpeg"
+                                alt="Manikarnika">
+                        </div>
+                        <div class="team-member-info">
+                            <h3 class="team-member-name">Manikarnika</h3>
+                            <p class="team-member-role">Team Member</p>
+                            <p class="team-member-department">CSE Dept</p>
+                        </div>
+                    </div>
+
                     <!-- DUPLICATE CARDS FOR SEAMLESS LOOP -->
                     <div class="team-member-card">
                         <div class="team-member-image-wrapper">
@@ -3234,6 +3476,7 @@
                     alt="Dheeraj" class="hero-card-bg-image">
                 <div class="hero-card-content-overlay">
                     <h3 class="hero-card-heading">Dheeraj</h3>
+                    <p class="hero-card-subtitle">Technical Team</p>
                 </div>
             </article>
 
@@ -3243,6 +3486,7 @@
                     alt="Anuj" class="hero-card-bg-image">
                 <div class="hero-card-content-overlay">
                     <h3 class="hero-card-heading">Anuj</h3>
+                    <p class="hero-card-subtitle">Technical Team</p>
                 </div>
             </article>
 
@@ -3256,6 +3500,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>TechVaaganza</h3>
+                    
                     <p>Department Of Computer Science Flagship Event</p>
                     <p class="footer-college">Vaagdevi College of Engineering</p>
                 </div>
