--- a/index.html
+++ b/index.html
@@ -978,7 +978,6 @@
             letter-spacing: 3px;
             text-transform: uppercase;
             font-weight: 500;
-            margin-bottom: 15px;
             display: block;
         }
 
@@ -2467,7 +2466,7 @@
                                 <img src="./images/Pricipal_faculty.jpeg" alt="Principal">
                             </div>
                             <div class="tech-image-overlay">
-                                <div class="tech-image-name">Principal</div>
+                                <div class="tech-image-name">Dr.K.Prakash</div>
                                 <div class="tech-image-role">Principal</div>
                             </div>
                         </div>
@@ -2478,7 +2477,7 @@
                                 <img src="./images/Vice-Principal_faculty.jpeg" alt="Vice Principal">
                             </div>
                             <div class="tech-image-overlay">
-                                <div class="tech-image-name">Vice Principal</div>
+                                <div class="tech-image-name">Dr.K.Thirupathi Rao</div>
                                 <div class="tech-image-role">Vice Principal</div>
                             </div>
                         </div>
@@ -2489,8 +2488,8 @@
                                 <img src="./images/Hod_faculty.jpeg" alt="HOD CSE">
                             </div>
                             <div class="tech-image-overlay">
-                                <div class="tech-image-name">HOD - CSE</div>
-                                <div class="tech-image-role">Head of Department</div>
+                                <div class="tech-image-name">Dr.N.Satyavathi</div>
+                                <div class="tech-image-role">Head of Department - CSE</div>
                             </div>
                         </div>
 
@@ -2500,8 +2499,8 @@
                                 <img src="./images/Aravind_faculty.jpeg" alt="Aravind">
                             </div>
                             <div class="tech-image-overlay">
-                                <div class="tech-image-name">Aravind</div>
-                                <div class="tech-image-role">Faculty</div>
+                                <div class="tech-image-name">CH.Aravind Kumar</div>
+                                <div class="tech-image-role">Faculty Co-ordinator</div>
                             </div>
                         </div>
 
@@ -2511,8 +2510,8 @@
                                 <img src="./images/Shekar_faculty.jpeg" alt="Shekar">
                             </div>
                             <div class="tech-image-overlay">
-                                <div class="tech-image-name">Shekar</div>
-                                <div class="tech-image-role">Faculty</div>
+                                <div class="tech-image-name">K.Shekar</div>
+                                <div class="tech-image-role">Faculty Co-ordinator</div>
                             </div>
                         </div>
 
@@ -3476,7 +3475,7 @@
                     alt="Dheeraj" class="hero-card-bg-image">
                 <div class="hero-card-content-overlay">
                     <h3 class="hero-card-heading">Dheeraj</h3>
-                    <p class="hero-card-subtitle">Technical Team</p>
+                    <p class="hero-card-subtitle">Developer</p>
                 </div>
             </article>
 
@@ -3486,7 +3485,7 @@
                     alt="Anuj" class="hero-card-bg-image">
                 <div class="hero-card-content-overlay">
                     <h3 class="hero-card-heading">Anuj</h3>
-                    <p class="hero-card-subtitle">Technical Team</p>
+                    <p class="hero-card-subtitle">Developer</p>
                 </div>
             </article>
 
@@ -3517,8 +3516,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Us</h4>
-                    <p>Email: techvaaganza@vaagdevi.edu.in</p>
-                    <p>Phone: +91 XXX XXX XXXX</p>
+                    <p>Email: techvaaganza2026@gmail.com</p>
                     <p>Location: Warangal, Telangana</p>
                 </div>
             </div>
